Add PATCH /branches/{branchId}/menus/{menuId}
